Fix spacing under photo for mobile ver.

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -50,5 +50,6 @@
 
 	#my-face {
 		width: 250px;
+		margin-bottom: 1rem;
 	}
 }
